Fixed padding for age-recog panels, fixed bug causing download icon to not be visible

--- a/client/src/action/ActionComponent.css
+++ b/client/src/action/ActionComponent.css
@@ -79,7 +79,7 @@
 
 .download-icon {
     width: 15px;
-    margin-right: 7px;
+    margin-left: 7px;
 }
 
 .buttonWidth {
