--- a/client/src/action/ActionView.css
+++ b/client/src/action/ActionView.css
@@ -20,7 +20,7 @@
     border: 1px solid #1a4397;
     border-radius: 4px;
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
-    max-width: 330px;
+    max-width: 350px;
 }
 
 .age-recognition-content {
